--- a/src/components/excoform.css
+++ b/src/components/excoform.css
@@ -5,7 +5,7 @@
 
 @media(max-width: 780px) {
     #exco{
-        height: 400px;
+        height: 450px;
         overflow-y: scroll;
         }
 
@@ -13,5 +13,6 @@
             
             padding-left: 10px;
             padding-right: 10px;
+            border-radius: 10px;
         }
 }
